--- a/CampaignCompanion/CampaignCompanion/Views/MasterPage.xaml
+++ b/CampaignCompanion/CampaignCompanion/Views/MasterPage.xaml
@@ -62,7 +62,7 @@
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="50"/>
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Margin="10,0,0,0" FontFamily="RobotoSlab-Regular.ttf#RobotoSlab" VerticalTextAlignment="Center" Text="Player 1" FontSize="15" TextColor="GhostWhite"/>
+            <Label x:Name="player" Grid.Column="0" Margin="10,0,0,0" FontFamily="RobotoSlab-Regular.ttf#RobotoSlab" VerticalTextAlignment="Center" x:FieldModifier="public" FontSize="15" TextColor="GhostWhite"/>
             <Button x:Name="SettingsButton" x:FieldModifier="public" Image="settingswhite.png"   BorderColor="Transparent" Scale="0.4" BackgroundColor="Transparent" Grid.Column="1" Margin="0,0,10,0"/>
         </Grid>
     </StackLayout>
