--- a/CampaignCompanion/CampaignCompanion/Views/Possesions.xaml
+++ b/CampaignCompanion/CampaignCompanion/Views/Possesions.xaml
@@ -9,7 +9,38 @@
         <ScrollView>
             <StackLayout>
                 <Label Text="Currency" TextColor="Goldenrod" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="8" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20" FontAttributes="Bold" BackgroundColor="#B22222" Margin="5,25,5,0"/>
-                <Grid HorizontalOptions="Center" Padding="25,0,25,0" Margin="5,5,5,5">
+                <ListView Margin="30,0,30,25" x:Name="allSkills" x:FieldModifier="public" ItemsSource="{Binding Money}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="30" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Grid.Column="0" Text="{Binding Name}" TextColor="#161616" Grid.ColumnSpan="4" VerticalTextAlignment="Center" HorizontalTextAlignment="Start" FontAttributes="Bold" FontFamily="RobotoSlab-Regular.ttf#RobotoSlab"/>
+                                    <Button ImageSource="addblack.png" HorizontalOptions="Center" Scale="0.25" Grid.Column="4"/>
+                                    <Entry Grid.Column="5" Placeholder="0" TextColor="GhostWhite" VerticalOptions="End" FontFamily="RobotoSlab-Regular.ttf#RobotoSlab" HorizontalTextAlignment="Center" Keyboard="Numeric"/>
+                                    <Button ImageSource="addblack.png" HorizontalOptions="Center" Scale="0.25" Grid.Column="6"/>
+                                    <Button ImageSource="addblack.png" HorizontalOptions="Center" Scale="0.25" Grid.Column="7"/>
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+
+
+
+                <!--<Grid HorizontalOptions="Center" Padding="25,0,25,0" Margin="5,5,5,5">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
@@ -25,12 +56,12 @@
                     <Entry FontFamily="RobotoSlab-Regular.ttf#RobotoSlab" Placeholder="0" TextColor="Goldenrod" Grid.Row="0" Grid.Column="5" HorizontalTextAlignment="Center" Keyboard="Numeric" FontSize="15" FontAttributes="Bold" VerticalOptions="End"/>
                     <ImageButton Source="addblack.png" HorizontalOptions="Center" Grid.Row="0" Scale="0.5" Grid.Column="6"/>
                     <ImageButton Source="addblack.png" HorizontalOptions="Center" Grid.Row="0" Scale="0.5" Grid.Column="7"/>
-                </Grid>
-                <Label Text="Armour" TextColor="Goldenrod" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="8" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20" FontAttributes="Bold" BackgroundColor="#B22222"/>
+                </Grid>-->
+                <!--<Label Text="Armour" TextColor="Goldenrod" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="8" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20" FontAttributes="Bold" BackgroundColor="#B22222"/>
                 <Label Text="Weapons" TextColor="Goldenrod" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="8" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20" FontAttributes="Bold" BackgroundColor="#B22222"/>
                 <Label Text="Vehicles and Pets" TextColor="Goldenrod" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="8" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20" FontAttributes="Bold" BackgroundColor="#B22222"/>
                 <Label Text="Potions" TextColor="Goldenrod" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="8" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20" FontAttributes="Bold" BackgroundColor="#B22222"/>
-                <Label Text="Artefacts" TextColor="Goldenrod" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="8" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20" FontAttributes="Bold" BackgroundColor="#B22222"/>                
+                <Label Text="Artefacts" TextColor="Goldenrod" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="8" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" FontSize="20" FontAttributes="Bold" BackgroundColor="#B22222"/>-->                
             </StackLayout>
         </ScrollView>
 
